fix: Update footer and topbar styles for improved layout and consistency; adjust background colors and z-index properties

--- a/assets/css/main/footer.css
+++ b/assets/css/main/footer.css
@@ -19,6 +19,7 @@
 
     /* make footer a containing block for absolutely positioned children */
     position: relative;
+	padding-bottom: -50px;
 }
 
 .footer .logo-footer {
@@ -58,6 +59,7 @@
 	margin: 0 0;
 	z-index: 1;
 	position: relative;
+
 }
 
 .footer-container .gradient-top {
@@ -77,7 +79,7 @@
 .footer .logo::before {
 	content: "";
 	position: absolute;
-	top: 0;
+	top: calc(-12px - 7px - 10px - 10px - 2px - 5px);
 	left: 0;
 	right: 0;
 	height: 11rem; 
@@ -95,13 +97,15 @@
 }
 
 .footer .logo h1 {
-	margin: 0 0;
+	margin: -90px 0 0 0;
+	z-index: 0;
 }
 
 .footer .home {
 	padding-left: 40px;
 	display: flex;
 	flex-direction: column;
+	z-index: 1;
 }
 
 .footer .about {
@@ -109,6 +113,7 @@
 	padding-right: 40px;
 	display: flex;
 	flex-direction: column;
+	z-index: 1;
 }
 
 .footer .schedules {
@@ -116,6 +121,7 @@
 	padding-left: 40px;
 	display: flex;
 	flex-direction: column;
+	z-index: 1;
 }
 
 .footer .more {
@@ -123,6 +129,7 @@
 	padding-right: 40px;
 	display: flex;
 	flex-direction: column;
+	z-index: 1;
 }
 
 .footer a[alt="title"] {
@@ -167,7 +174,7 @@
 	opacity: 1;
 	max-width: 100%;
 	word-wrap: wrap;
-	color: rgba(55, 130, 84, 1);
+	text-decoration: underline;
 }
 
 /* hide element used to store full faculty name; kept collapsed by default */
@@ -303,12 +310,17 @@
 }
 
 @media(max-width: 1250px) {
+	.footer-container .gradient-top {
+		height: 15rem;
+	}
+
 	.footer {
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-template-rows: repeat(5, 0.35fr);
 		grid-column-gap: 0px;
 		grid-row-gap: 0px;
+		padding-top: 0px;
 	}
 
 	.footer .home { grid-area: 1 / 1 / 2 / 2; }
@@ -325,12 +337,20 @@
 		margin-bottom: 30px;
 	}
 
+	.footer .home a {
+		font-size: 16px;
+	}
+
 	.footer .about {
 		padding-left: 20px;
 		padding-right: 20px;
 		display: flex;
 		flex-direction: column;
 		margin-bottom: 30px;
+	}
+	
+	.footer .about a {
+		font-size: 16px;
 	}
 
 	.footer .schedules {
@@ -343,6 +363,10 @@
 		margin-bottom: 30px;
 	}
 
+	.footer .schedules a {
+		font-size: 16px;
+	}
+
 	.footer .more {
 		padding-left: 20px;
 		padding-right: 20px;
@@ -350,6 +374,11 @@
 		flex-direction: column;
 		margin-bottom: 30px;
 	}
+
+	.footer .more a {
+		font-size: 16px;
+	}
+
 	.footer .separator {
 		width: 80%;
 	}
@@ -363,5 +392,13 @@
 	}
 	.footer .logo-footer {
 		transform: translateY(0px);
+	}
+	.footer .buttons a.home {
+		margin-bottom: 0px;
+		gap: -0px;
+	}
+	.footer .logo h1 {
+		margin: 0px 0 0 0;
+		z-index: 0;
 	}
 }
